@@ -66,7 +66,8 @@ class User < ActiveRecord::Base
   safe_attribute          :login, :time_zone, :created_at, :updated_at, :lang, :id
   safe_method             :status => Number, :status_name => String,
                           :is_anon? => Boolean, :is_admin? => Boolean, :user? => Boolean, :commentator? => Boolean,
-                          :moderated? => Boolean, :asset_host? => Boolean, [:in_group?, String] => Boolean
+                          :moderated? => Boolean, :asset_host? => Boolean, [:in_group?, String] => Boolean,
+                          :group_names => [String]
 
   safe_context            :node => node_user_proc,
                           :to_publish => ['Version'], :redactions => ['Version'], :proposed => ['Version'],
@@ -219,10 +220,14 @@ class User < ActiveRecord::Base
   # This is set on the user during login.
   alias asset_host? asset_host
   
-  def in_group?(name)
+  def group_names
     @group_names ||= begin
       groups.all(:order=>'name').map(&:name)
-    end.include?(name)
+    end
+  end
+  
+  def in_group?(name)
+    group_names.include?(name)
   end
 
   # Return true if the user's status is high enough to start editing nodes.
