@@ -1,4 +1,4 @@
 class UserSession < Authlogic::Session::Base
   self.find_by_login_method = :find_allowed_user_by_login
-
+  consecutive_failed_logins_limit 10
 end
