@@ -1,2 +1,1 @@
-Zena.use Bricks::Acls
 Site::CLEANUP_SQL.unshift ['acls', 'site_id = ?']
