@@ -1,6 +1,3 @@
-require 'bricks/captcha'
-Zena.use Bricks::Captcha
-
 # TODO change 'asset_method' to Zena::Use.zazen_tag 'email' => :zazen_email
 Zena::Use::Zazen::ViewMethods.asset_method 'email' => :email_asset
 
