@@ -1,4 +1,0 @@
-require 'bricks/grid'
-
-Zena.use Bricks::Grid
-
