@@ -1,4 +1,1 @@
-require 'bricks/math'
-
-Zena.use Bricks::Math
 Zena::Use::Zazen::ViewMethods.asset_method 'math' => :math_asset
