@@ -1,3 +1,0 @@
-require 'bricks/spreadsheet'
-
-Zena.use Bricks::Spreadsheet
